--- a/index.html
+++ b/index.html
@@ -3,31 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake con Javascrip</title>
-    <style>
-       body {
-        width: 95w;
-        height: 95 vh;
-        display: grid;
-        place-items: center;
-        background-color: black;
-        color: white;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-       }
-       #lienzo {
-        box-shadow: 0px 0px 20px 5px rgb(7, 29, 232);
-       }
-       h1 {
-        text-align: center;
-       }
+    <title>Snake con javascript</title>
+    <style >
+        body {
+            width: 95vw;
+            height: 95vh;
+            display: grid;
+            place-items: center;
+            background-color: black;
+            color: white;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            }
+#lienzo{
+    box-shadow: 0px 0px 20px 5px rgb(255, 255, 255);
+
+}
+h1{
+    text-align: center;
+}
+.btn{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: blue;
+    border: 5px solid black;
+    margin: 20px;
+    color: black;
+    font-weight: bold;
+}
+
+ .container {
+    width: 80%;
+    background-color: black;
+    border: 10px solid red;
+    display: flex;
+    flex-direction: row;
+}
+.left .rigth {
+    height: 500px;
+    display: flex;
+    flex-direction: colum;
+    justify-content: center;
+}
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Shake Javascrip</h1>
-        <canvas id="lienzo" width="600" height="400" ></canvas>
+        <div class="left">
+            <button class="btn">Up</button>
+            <button class="btn">Down</button>
+        </div>
+        <div class="center">
+        <h1> Snake javascript</h1>
+        <canvas id="lienzo" width="500" height="340"></canvas>
+    </div>
+
+    <div class="rigth">
+        <button class="btn">Left</button>
+        <button class="btn">Rigth</button>
     </div>
     <script src="./app.js"></script>
-    
 </body>
 </html>
